# reddit-summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  models.py
app/ai/: __init__.py  summarizer.py
app/api/: __init__.py  routes.py  scheduler.py
app/email/: __init__.py  sender.py  templates.py
app/reddit/: __init__.py  client.py  fetcher.py  ranking.py
app/static/css/: styles.css
app/static/js/: app.js
templates/: dashboard.html
