[project]
name = "reddit-summarizer"
version = "1.0.0"
description = "Daily Reddit digest with AI summaries"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "praw==7.7.1",
    "anthropic==0.18.1",
    "resend==0.7.0",
    "python-dotenv==1.0.0",
    "apscheduler==3.10.4",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "jinja2==3.1.3",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
